--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/Pratice.Pratice
-EditorStartupMap=/Game/Map/Pratice.Pratice
+GameDefaultMap=/Game/Map/L_World.L_World
+EditorStartupMap=/Game/UI/MainmenuMap.MainmenuMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
